# romm-bifrost

./: .gitignore  README.md  config.example.toml  install-deck.sh  install.sh  pyproject.toml
.github/workflows/: release.yml
bifrost/: __init__.py  __main__.py  cache.py  cli.py  config.py  errors.py  gamelist.py  locking.py  logging_setup.py  multidisc.py  play_sessions.py  preflight.py  save_sync.py  state_sync.py  symlink_manager.py  watcher.py
bifrost/api/: __init__.py  client.py  models.py
bifrost/data/systemd/: bifrost-save-sync.service  bifrost-save-sync.timer  bifrost-save-watch.service  bifrost-sync.service  bifrost-sync.timer
bifrost/saves/: __init__.py  layout.py  profiles.py
docs/: development_setup.md
tests/: conftest.py  test_api_client.py  test_cache.py  test_cli_cache.py  test_cli_config_commands.py  test_cli_debug.py  test_cli_device_enroll.py  test_cli_gamelist.py  test_cli_scan.py  test_cli_setup.py  test_cli_status.py  test_cli_sync.py  test_config.py  test_gamelist.py  test_multidisc.py  test_save_sync.py  test_save_sync_production.py  test_saves_layout.py  test_stale_symlinks.py  test_state_sync.py  test_state_sync_production.py  test_symlink_manager.py
