[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "romm-bifrost"
version = "0.1.0"
description = "RomM <-> ES-DE bridge CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Bifrost Contributors" }]
dependencies = [
  "click>=8.1.7",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "rich>=13.7.1",
  "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-httpx>=0.30.0",
  "ruff>=0.5.6",
]

[project.scripts]
bifrost = "bifrost.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bifrost*"]

[tool.pytest.ini_options]
addopts = "-q --cov=bifrost --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
